fix spacing in between images and fix form margins

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 
 #top-banner {
     width: 100%;
-    height: 350px;
+    height: 325px;
 }
 
 h1 {
@@ -48,10 +48,10 @@ right: 5%;
 /*** INPUT FIELDS ***/
 
 form {
-    padding: 0 3%;
+    padding: 0 2%;
 }
 
-.inputfield {;
+.inputfield {
     padding: .05%;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -67,21 +67,27 @@ input[type=text] {
 
 .btn-sub {
     width:50%;
+    margin-bottom: 2%;
 }
 
 
 /*** MEMES GO HERE ***/
 
+#image-area {
+    text-align: center;
+    display:flex;
+    flex-direction: row;
+    align-content: space-evenly;
+    flex-wrap: wrap;
+}
+
 .holding-div {
     position: relative;
-    width: 45%;
-    padding: 1%;
-    width: 50%;
 }
 
 .meme-image {
-    width: 100%;
-    max-height: 600px;
+    max-width: 100%;
+    margin: 1%;
 }
 
 .text-overlay {
